# library-app

./: BUILD  LICENSE  MODULE.bazel  maven_install.json
src/main/java/com/merito/app/: AppApplication.java
src/main/java/com/merito/app/categories/: Book.java  Category.java  Movie.java  Music.java
src/main/java/com/merito/app/controllers/: HomeController.java
src/main/java/com/merito/app/models/: Book.java  Category.java  Movie.java
src/main/resources/templates/: index.html
src/test/java/com/merito/app/: AppApplicationTests.java
